feat: added export accounts [ODP-20]

--- a/airbyte-integrations/connectors/source-adaptive-insights/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/source-adaptive-insights/sample_files/configured_catalog.json
@@ -3,8 +3,7 @@
    {
      "stream": {
        "name": "export_dimensions",
-       "json_schema": {
-       }
+       "json_schema": {}
      },
      "sync_mode": "full_refresh",
      "destination_sync_mode": "overwrite"
@@ -12,8 +11,15 @@
    {
      "stream": {
        "name": "export_levels",
-       "json_schema": {
-       }
+       "json_schema": {}
+     },
+     "sync_mode": "full_refresh",
+     "destination_sync_mode": "overwrite"
+   },
+   {
+     "stream": {
+       "name": "export_accounts",
+       "json_schema": {}
      },
      "sync_mode": "full_refresh",
      "destination_sync_mode": "overwrite"
