--- a/airbyte-integrations/connectors/source-adaptive-insights/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/source-adaptive-insights/sample_files/configured_catalog.json
@@ -23,6 +23,14 @@
      },
      "sync_mode": "full_refresh",
      "destination_sync_mode": "overwrite"
+   },
+   {
+     "stream": {
+       "name": "export_data",
+       "json_schema": {}
+     },
+     "sync_mode": "full_refresh",
+     "destination_sync_mode": "overwrite"
    }
  ]
 }
