--- a/airbyte-integrations/connectors/source-adaptive-insights/source_adaptive_insights/spec.yaml
+++ b/airbyte-integrations/connectors/source-adaptive-insights/source_adaptive_insights/spec.yaml
@@ -6,7 +6,9 @@ connectionSpecification:
   required:
     - username
     - password
-  additionalProperties: false
+    # - dimensions
+    - versionType
+    - startDate
   properties:
     username:
       type: string
@@ -21,3 +23,42 @@ connectionSpecification:
         Your Adaptive Insights password
       airbyte_secret: true
       order: 1
+    # TODO: to select dimensions we need to createe the schema on the fly and not fixed
+    # dimensions:
+    #   type: string
+    #   title: Dimensions
+    #   examples:
+    #     - Assets,Contract,GL Account,Location
+    #     - Contract,GL Account,Assignments
+    #   description: >-
+    #     Insert the dimensions to export data from, comma separated i.e. dim1,dim2,dim3
+    #   order: 2
+    versionType:
+      type: string
+      title: Adaptive Data Version
+      description: >-
+        latest-actuals: Get the latest version that matches the pattern LBEMMYY
+        previous-actuals: Get the second to last version that matches the pattern LBEMMYY
+        prediction: Get the prediction version that matches the pattern AOPMMYY
+      # enum:
+      #   - latest-actuals
+      #   - previous-actuals
+      #   - prediction
+      order: 2
+    startDate:
+      type: string
+      title: Data Start Date
+      description: >-
+        From when do you want to start getting data i.e. 01/2021 for data from January 2021
+      pattern: ^[0-9]{2}/[0-9]{4}$
+      examples:
+        - "%m/%Y"
+      default: "01/2019"
+      order: 3
+    accounts:
+      type: string
+      title: Account Codes
+      description: >-
+        Add the account codes that need to be indcluded in the `export_data` here. They need to be
+        comma separated i.e. account_code1,account_code2,...
+        WARNING: Ommiting this section can result in huge performance issues, MAKE SURE you are using the corect codes
