feat(source-apple-search-ads): add lookback window and set to 30d

--- a/airbyte-integrations/connectors/source-apple-search-ads/source_apple_search_ads/apple_search_ads.yaml
+++ b/airbyte-integrations/connectors/source-apple-search-ads/source_apple_search_ads/apple_search_ads.yaml
@@ -102,6 +102,7 @@ definitions:
       datetime: "{{ config['end_date'] or today_utc() }}"
       datetime_format: "%Y-%m-%d"
     step: "1d"
+    lookback_window: "30d"
     datetime_format: "%Y-%m-%d"
     cursor_field: "{{ options['stream_cursor_field'] }}"
 
