--- a/airbyte-integrations/connectors/source-apple-search-ads/source_apple_search_ads/spec.yaml
+++ b/airbyte-integrations/connectors/source-apple-search-ads/source_apple_search_ads/spec.yaml
@@ -32,7 +32,7 @@ connectionSpecification:
     start_date:
       type: string
       title: Start Date
-      description: Start getting data from that date. For DAILY reports, the start date can't be older than 90 days.
+      description: Start getting data from that date.
       pattern: ^[0-9]{4}-[0-9]{2}-[0-9]{2}$
       examples:
         - "2020-01-01"
