feat: Finishes new stream for Headcount in Adaptive Insights Connector. [ODP-164]

--- a/airbyte-integrations/connectors/source-adaptive-insights/sample_files/configured_catalog.json
+++ b/airbyte-integrations/connectors/source-adaptive-insights/sample_files/configured_catalog.json
@@ -31,6 +31,14 @@
      },
      "sync_mode": "full_refresh",
      "destination_sync_mode": "overwrite"
+   },
+   {
+     "stream": {
+       "name": "export_headcount",
+       "json_schema": {}
+     },
+     "sync_mode": "full_refresh",
+     "destination_sync_mode": "overwrite"
    }
  ]
 }
