--- a/airbyte-integrations/connectors/source-apple-search-ads/source_apple_search_ads/apple_search_ads.yaml
+++ b/airbyte-integrations/connectors/source-apple-search-ads/source_apple_search_ads/apple_search_ads.yaml
@@ -103,8 +103,9 @@ definitions:
     end_datetime:
       datetime: "{{ config['end_date'] or today_utc() }}"
       datetime_format: "%Y-%m-%d"
-    step: "1d"
-    lookback_window: "30d"
+    step: "P1D"
+    cursor_granularity: "P1D"
+    lookback_window: "P30D"
     datetime_format: "%Y-%m-%d"
     cursor_field: "{{ options['stream_cursor_field'] }}"
 
