--- a/airbyte-integrations/connectors/source-apple-search-ads/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-apple-search-ads/acceptance-test-config.yml
@@ -25,6 +25,7 @@ acceptance_tests:
         configured_catalog_path: "integration_tests/configured_catalog.json"
         future_state:
           future_state_path: "integration_tests/abnormal_state.json"
+        threshold_days: 30
   full_refresh:
     tests:
       - config_path: "secrets/config.json"
