--- a/airbyte-integrations/connectors/source-apple-search-ads/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-apple-search-ads/acceptance-test-config.yml
@@ -19,12 +19,14 @@ acceptance_tests:
       - config_path: "secrets/config.json"
         configured_catalog_path: "integration_tests/configured_catalog.json"
         empty_streams: []
+        timeout_seconds: 3600
   incremental:
     tests:
       - config_path: "secrets/config.json"
         configured_catalog_path: "integration_tests/configured_catalog.json"
         future_state:
           future_state_path: "integration_tests/abnormal_state.json"
+        timeout_seconds: 3600
         threshold_days: 30
   full_refresh:
     tests:
@@ -40,3 +42,4 @@ acceptance_tests:
           "keywords_report_daily":
             - "granularity"
             - "metadata"
+        timeout_seconds: 3600
