--- a/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
@@ -649,6 +649,13 @@
   icon: freshservice.svg
   sourceType: api
   releaseStage: alpha
+- name: GCS
+  sourceDefinitionId: 2a8c41ae-8c23-4be0-a73f-2ab10ca1a820
+  dockerRepository: airbyte/source-gcs
+  dockerImageTag: 0.1.0
+  documentationUrl: https://docs.airbyte.com/integrations/sources/gcs
+  icon: gcs.svg
+  sourceType: file
 - name: Genesys
   sourceDefinitionId: 5ea4459a-8f1a-452a-830f-a65c38cc438d
   dockerRepository: airbyte/source-genesys
