--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -801,7 +801,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-amazon-ads:1.0.0"
+- dockerImage: "airbyte/source-amazon-ads:1.0.1"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/amazon-ads"
     connectionSpecification:
@@ -887,6 +887,27 @@
           type: "integer"
           default: 3
           order: 8
+        report_record_types:
+          title: "Report Record Types"
+          description: "Optional configuration which accepts an array of string of\
+            \ record types. Leave blank for default behaviour to pull all report types.\
+            \ Use this config option only if you want to pull specific report type(s).\
+            \ See <a href=\"https://advertising.amazon.com/API/docs/en-us/reporting/v2/report-types\"\
+            >docs</a> for more details"
+          items:
+            type: "string"
+            enum:
+            - "adGroups"
+            - "asins"
+            - "asins_keywords"
+            - "asins_targets"
+            - "campaigns"
+            - "keywords"
+            - "productAds"
+            - "targets"
+          type: "array"
+          uniqueItems: true
+          order: 9
       required:
       - "client_id"
       - "client_secret"
