--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -950,7 +950,7 @@
               type: "string"
               path_in_connector_config:
               - "client_secret"
-- dockerImage: "airbyte/source-amazon-seller-partner:0.2.33"
+- dockerImage: "airbyte/source-amazon-seller-partner:1.0.0"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/amazon-seller-partner"
     changelogUrl: "https://docs.airbyte.com/integrations/sources/amazon-seller-partner"
@@ -1095,6 +1095,7 @@
           - "US"
           type: "string"
       required:
+      - "app_id"
       - "lwa_app_id"
       - "lwa_client_secret"
       - "refresh_token"
