--- a/airbyte-integrations/connectors/source-onesignal/source_onesignal/schemas/apps.json
+++ b/airbyte-integrations/connectors/source-onesignal/source_onesignal/schemas/apps.json
@@ -1,19 +1,18 @@
 {
   "$schema": "https://json-schema.org/draft-07/schema#",
   "type": "object",
-  "additionalProperties": false,
   "properties": {
     "id": {
-      "type": "string"
+      "type": ["null", "string"]
     },
     "name": {
       "type": ["null", "string"]
     },
     "players": {
-      "type": "integer"
+      "type": ["null", "integer"]
     },
     "messageable_players": {
-      "type": "integer"
+      "type": ["null", "integer"]
     },
     "updated_at": {
       "type": ["null", "string"]
@@ -76,7 +75,7 @@
       "type": ["null", "string"]
     },
     "basic_auth_key": {
-      "type": "string"
+      "type": ["null", "string"]
     },
     "additional_data_is_root_payload": {
       "type": ["null", "boolean"]
