--- a/airbyte-ci/connectors_ci/metadata_service/lib/pyproject.toml
+++ b/airbyte-ci/connectors_ci/metadata_service/lib/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "metadata_service"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pydantic = "^1.10.6"
+click = "^8.1.3"
 
 
 [tool.poetry.group.test.dependencies]
@@ -17,8 +19,11 @@ pytest = "^7.2.2"
 [tool.poetry.group.dev.dependencies]
 datamodel-code-generator = "^0.17.1"
 
+[tool.poetry.scripts]
+validate_metadata_file = "metadata_service.validators.metadata_validator:validate_metadata_file"
+
 [tool.poe.tasks]
-generate-models = "datamodel-codegen --input models/src/ConnectorMetadataDefinitionV0.yaml --output models/generated/ConnectorMetadataDefinitionV0.py --use-title-as-name --disable-timestamp"
+generate-models = "datamodel-codegen --input metadata_service/models/src/ConnectorMetadataDefinitionV0.yaml --output metadata_service/models/generated/ConnectorMetadataDefinitionV0.py --use-title-as-name --disable-timestamp"
 
 [build-system]
 requires = ["poetry-core"]
