Expand valid and invalid test cases

--- a/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/invalid/metadata_catalog_no_type_override.yaml
+++ b/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/invalid/metadata_catalog_no_type_override.yaml
@@ -10,4 +10,12 @@ data:
   sourceType: database
   releaseStage: generally_available
   license: MIT
+  allowedHosts:
+    hosts:
+      - "${host}"
+      - "${tunnel_method.tunnel_host}"
+  catalogs:
+    oss:
+      enabled: true
+      connectorType: destination
 
