--- a/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/valid/metadata_catalog_required_resources.yaml
+++ b/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/valid/metadata_catalog_required_resources.yaml
@@ -10,4 +10,10 @@ data:
   sourceType: database
   releaseStage: generally_available
   license: MIT
+  resourceRequirements:
+    jobSpecific:
+      - jobType: sync
+        resourceRequirements:
+          memory_request: 1Gi
+          memory_limit: 1Gi
 
