--- a/airbyte-ci/connectors_ci/metadata_service/lib/metadata_service/models/src/CatalogOverrides.yaml
+++ b/airbyte-ci/connectors_ci/metadata_service/lib/metadata_service/models/src/CatalogOverrides.yaml
@@ -5,7 +5,12 @@ title: CatalogOverrides
 description: describes the overrides per catalog of a connector
 type: object
 additionalProperties: false
+required:
+  - enabled
 properties:
+  enabled:
+    type: boolean
+    default: false
   name:
     type: string
   dockerRepository:
