--- a/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/invalid/metadata_missing_version.yaml
+++ b/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/invalid/metadata_missing_version.yaml
@@ -1,4 +1,3 @@
-metadataSpecVersion: 1.0
 data:
   name: AlloyDB for PostgreSQL
   definitionId: 1fa90628-2b9e-11ed-a261-0242ac120002
@@ -10,4 +9,8 @@ data:
   sourceType: database
   releaseStage: generally_available
   license: MIT
+  allowedHosts:
+    hosts:
+      - "${host}"
+      - "${tunnel_method.tunnel_host}"
 
