--- a/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/valid/metadata_catalog_allowed_hosts.yaml
+++ b/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/valid/metadata_catalog_allowed_hosts.yaml
@@ -10,4 +10,8 @@ data:
   sourceType: database
   releaseStage: generally_available
   license: MIT
+  allowedHosts:
+    hosts:
+      - "${host}"
+      - "${tunnel_method.tunnel_host}"
 
