--- a/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/valid/metadata_catalog_complex_override.yaml
+++ b/airbyte-ci/connectors_ci/metadata_service/lib/tests/fixtures/valid/metadata_catalog_complex_override.yaml
@@ -10,4 +10,22 @@ data:
   sourceType: database
   releaseStage: generally_available
   license: MIT
+  allowedHosts:
+    hosts:
+      - "${host}"
+      - "${tunnel_method.tunnel_host}"
+  catalogs:
+    oss:
+      enabled: true
+    cloud:
+      enabled: true
+      name: "NEWNAME"
+      dockerRepository: airbyte/source-alloydb
+      resourceRequirements:
+        jobSpecific:
+          - jobType: sync
+            resourceRequirements:
+              memory_request: 1Gi
+              memory_limit: 1Gi
+
 
