🎉 New Source: Pendo [Configuration Based Source]
- add 4 full import streams to bootstrap the new source connector
- add documentation
- add svg
- generate uuid and add a record in source_definitions.yaml
- issue: https://github.com/airbytehq/airbyte/issues/2977

--- a/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
@@ -1442,6 +1442,14 @@
   allowedHosts:
     hosts:
       - "api.paystack.co"
+- name: Pendo
+  sourceDefinitionId: b1ccb590-e84f-46c0-83a0-2048ccfffdae
+  dockerRepository: airbyte/source-pendo
+  dockerImageTag: 0.1.0
+  documentationUrl: https://docs.airbyte.com/integrations/sources/pendo
+  icon: pendo.svg
+  sourceType: api
+  releaseStage: alpha
 - name: PersistIq
   sourceDefinitionId: 3052c77e-8b91-47e2-97a0-a29a22794b4b
   dockerRepository: airbyte/source-persistiq
