--- a/airbyte-integrations/connectors/source-salesforce/source_salesforce/spec.yaml
+++ b/airbyte-integrations/connectors/source-salesforce/source_salesforce/spec.yaml
@@ -46,6 +46,8 @@ connectionSpecification:
       description: >-
         Enter the date in the YYYY-MM-DD format. Airbyte will replicate the data added on and after this date. If this field is blank, Airbyte will replicate all data.
       type: string
+      pattern: >-
+        ^([0-9]{4}-[0-9]{2}-[0-9]{2}(T[0-9]{2}:[0-9]{2}:[0-9]{2}Z)?)$
       examples:
         - "2021-07-25"
         - "2021-07-25T00:00:00Z"
