Source Onesignal: update schemas

--- a/airbyte-integrations/connectors/source-onesignal/source_onesignal/schemas/apps.json
+++ b/airbyte-integrations/connectors/source-onesignal/source_onesignal/schemas/apps.json
@@ -15,10 +15,12 @@
       "type": ["null", "integer"]
     },
     "updated_at": {
-      "type": ["null", "string"]
+      "type": ["null", "string"],
+      "format": "date-time"
     },
     "created_at": {
-      "type": ["null", "string"]
+      "type": ["null", "string"],
+      "format": "date-time"
     },
     "gcm_key": {
       "type": ["null", "string"]
