--- a/airbyte-integrations/connectors/source-salesloft/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-salesloft/acceptance-test-config.yml
@@ -4,6 +4,13 @@ acceptance_tests:
     - config_path: secrets/config.json
       expect_records:
         path: integration_tests/expected_records.jsonl
+      ignored_fields:
+      - people:
+        - name: locale_utc_offset
+          bypass_reason: volatile data
+      - users:
+        - name: locale_utc_offset
+          bypass_reason: volatile data
     - config_path: secrets/config_oauth.json
       expect_records:
         path: integration_tests/expected_records.jsonl
