--- a/airbyte-integrations/connectors/source-salesloft/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-salesloft/acceptance-test-config.yml
@@ -5,10 +5,10 @@ acceptance_tests:
       expect_records:
         path: integration_tests/expected_records.jsonl
       ignored_fields:
-      - people:
+        people:
         - name: locale_utc_offset
           bypass_reason: volatile data
-      - users:
+        users:
         - name: locale_utc_offset
           bypass_reason: volatile data
     - config_path: secrets/config_oauth.json
