--- a/airbyte-integrations/connectors/source-mailchimp/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-mailchimp/acceptance-test-config.yml
@@ -47,7 +47,7 @@ acceptance_tests:
           lists: ["date_created"]
           campaigns: ["create_time"]
           email_activity: ["49d68626f3", "timestamp"]
-          reports: ["send_time"]
+          reports: ["49d68626f3", "send_time"]
   # Email activities stream has working campaigns with email newsletters.
   # Due to this sequential_reads test could be failed.
   full_refresh:
