--- a/airbyte-integrations/connectors/source-bigquery/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-bigquery/acceptance-test-config.yml
@@ -23,6 +23,7 @@ acceptance_tests:
     tests:
       - config_path: "secrets/sat-config.json"
         configured_catalog_path: "integration_tests/configured_catalog.json"
+#  DISABLED DUE TO ISSUE WITH DB STATES NOT MATCHING ACCEPTANCE TESTS EXPECTATIONS (wrong key-values)
 #  incremental:
 #    tests:
 #      - config_path: "secrets/sat-config.json"
