Source Mailchimp - Add Reports stream #23464 (#24112)
* init commit

* update doc

* add reports stream

* Bump mailchimps connector docker image

* fix tests

* update abnormal stream state for report mailchimp

* add mailchimp allowedHosts

* run config seed files

---------

Co-authored-by: Haithem Souala <haithem.souala@melting-point.fr>
Co-authored-by: Haithem Souala <haithem.souala@woopit.fr>

--- a/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
@@ -1103,11 +1103,14 @@
 - name: Mailchimp
   sourceDefinitionId: b03a9f3e-22a5-11eb-adc1-0242ac120002
   dockerRepository: airbyte/source-mailchimp
-  dockerImageTag: 0.3.4
+  dockerImageTag: 0.3.5
   documentationUrl: https://docs.airbyte.com/integrations/sources/mailchimp
   icon: mailchimp.svg
   sourceType: api
   releaseStage: generally_available
+  allowedHosts:
+    hosts:
+      - "*.api.mailchimp.com"
 - name: Mailjet Mail
   sourceDefinitionId: 56582331-5de2-476b-b913-5798de77bbdf
   dockerRepository: airbyte/source-mailjet-mail
