connectors-ci: fix typo in observability report

--- a/.github/workflows/test-command.yml
+++ b/.github/workflows/test-command.yml
@@ -181,7 +181,7 @@ jobs:
         id: extract_branch
       - name: Report Observability
         if: always()
-        run: ./tools/status/report_observability.sh ${{ github.event.inputs.connector }} ${{github.run_id}} ${{ needs.start-test-runner.outputs.pipeline-start-timestamp }} ${{ steps.extract_branch.outputs.branch }} ${{ github.sha }} ${{steps.test.outcome}} ${{steps.qa_checks.outcome}}
+        run: ./tools/status/report_observability.sh ${{ github.event.inputs.connector }} ${{github.run_id}} ${{ needs.start-test-runner.outputs.pipeline-start-timestamp }} ${{ github.event.inputs.gitref }} ${{ github.sha }} ${{steps.test.outcome}} ${{steps.qa_checks.outcome}}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.STATUS_API_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.STATUS_API_AWS_SECRET_ACCESS_KEY }}
