Connector Health: Fixed SAT for GitHub, Google Analytics v4 (UA), Google Search Console, Hubspot, Recharge, Sendgrid, Greenhouse, Chargebee, Survey Monkey, Twitter, Zenloop, Zendesk-support, Pinterest, Slack, Sentry (#23946)
* Fix SAT source-google-search-console, source-hubspot, source-instagram, source-recharge, source-zendesk-support

* Fix github, sendgrid, google-analytics-v4, survey-monkey, twitter

* Added a newline at the end

* Fix pinterest, twitter expected records

* Fix hubspot and slack

* Fix sentry and GAv4(UA) allowed hosts

* Fix github and sendgrid

* Fix google analytics UA expected records

* Increase timeout for read records

* Fix chargebee and greenhouse

* Fix sentry expected records

--- a/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_definitions.yaml
@@ -764,6 +764,12 @@
   icon: google-analytics.svg
   sourceType: api
   releaseStage: generally_available
+  allowedHosts:
+    hosts:
+      - oauth2.googleapis.com
+      - www.googleapis.com
+      - analyticsdata.googleapis.com
+      - analyticsreporting.googleapis.com
 - name: Google Analytics 4 (GA4)
   sourceDefinitionId: 3cc2eafd-84aa-4dca-93af-322d9dfeec1a
   dockerRepository: airbyte/source-google-analytics-data-api
