--- a/airbyte-integrations/connectors/source-kobotoolbox/source_kobotoolbox/spec.yaml
+++ b/airbyte-integrations/connectors/source-kobotoolbox/source_kobotoolbox/spec.yaml
@@ -1,20 +1,21 @@
 documentationUrl: https://docs.airbyte.com/integrations/sources/kobotoolbox
+supportsNormalization: false
 connectionSpecification:
-  $schema: http://json-schema.org/draft-07/schema#
-  title: Kobotoolbox Spec
-  type: object
-  required:
-    - username
-    - password
-  properties:
-    username:
-      type: string
-      title: Username
-      description: Username to authenticate into the KoboToolBox server
-      order: 1
-    password:
-      type: string
-      title: Password
-      description: Password to authenticate into the KoboToolBox server
-      airbyte_secret: true
-      order: 2
+    $schema: http://json-schema.org/draft-07/schema#
+    title: Kobotoolbox Spec
+    type: object
+    required:
+        - username
+        - password
+    properties:
+        username:
+            type: string
+            title: Username
+            description: Username to authenticate into the KoboToolBox server
+            order: 1
+        password:
+            type: string
+            title: Password
+            description: Password to authenticate into the KoboToolBox server
+            airbyte_secret: true
+            order: 2
