--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -16188,7 +16188,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-xero:0.1.0"
+- dockerImage: "airbyte/source-xero:0.2.0"
   spec:
     documentationUrl: "https://docs.airbyte.io/integrations/sources/xero"
     connectionSpecification:
@@ -16197,57 +16197,48 @@
       type: "object"
       required:
       - "authentication"
-      - "start_date"
-      - "scopes"
       - "tenant_id"
-      - "client_id"
-      - "client_secret"
+      - "start_date"
       additionalProperties: true
       properties:
-        client_id:
-          title: "Client ID"
-          type: "string"
-          description: "Enter your Xero application's Client ID"
-        client_secret:
-          title: "Client Secret"
-          type: "string"
-          description: "Enter your Xero application's Client Secret"
-          airbyte_secret: true
+        authentication:
+          type: "object"
+          title: "Authenticate via Xero (OAuth)"
+          required:
+          - "client_id"
+          - "client_secret"
+          - "refresh_token"
+          - "access_token"
+          - "token_expiry_date"
+          properties:
+            client_id:
+              type: "string"
+              title: "Client ID"
+              description: "Enter your Xero application's Client ID"
+            client_secret:
+              type: "string"
+              title: "Client Secret"
+              description: "Enter your Xero application's Client Secret"
+              airbyte_secret: true
+            refresh_token:
+              type: "string"
+              title: "Refresh Token"
+              description: "Enter your Xero application's refresh token"
+              airbyte_secret: true
+            access_token:
+              type: "string"
+              description: "Enter your Xero application's access token"
+              airbyte_secret: true
+            token_expiry_date:
+              type: "string"
+              description: "The date-time when the access token should be refreshed"
+          order: 0
         tenant_id:
           title: "Tenant ID"
           type: "string"
           description: "Enter your Xero organization's Tenant ID"
-        scopes:
-          title: "Scopes"
-          type: "string"
-          description: "Enter your required list of scopes (delimited by comma)"
-        authentication:
-          type: "object"
-          title: "Authentication"
-          description: "Type and additional credentials of the Xero API connection"
-          oneOf:
-          - title: "Authenticate via Xero (OAuth) (unsupported yet)"
-            type: "object"
-            required:
-            - "auth_type"
-            - "refresh_token"
-            properties:
-              auth_type:
-                type: "string"
-                const: "oauth"
-              refresh_token:
-                title: "Refresh Token"
-                type: "string"
-                description: "Enter your Xero application's refresh token"
-                airbyte_secret: true
-          - title: "Custom Connections Authentication"
-            type: "object"
-            required:
-            - "auth_type"
-            properties:
-              auth_type:
-                type: "string"
-                const: "custom_connection"
+          airbyte_secret: true
+          order: 1
         start_date:
           type: "string"
           pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}Z$"
@@ -16255,9 +16246,57 @@
             \ data with created_at before this data will not be synced."
           examples:
           - "2022-03-01T00:00:00Z"
+          format: "date-time"
+          order: 2
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
+    advanced_auth:
+      auth_flow_type: "oauth2.0"
+      predicate_key: []
+      oauth_config_specification:
+        complete_oauth_output_specification:
+          type: "object"
+          additionalProperties: false
+          properties:
+            refresh_token:
+              type: "string"
+              path_in_connector_config:
+              - "authentication"
+              - "refresh_token"
+            access_token:
+              type: "string"
+              path_in_connector_config:
+              - "authentication"
+              - "access_token"
+            token_expiry_date:
+              type: "string"
+              path_in_connector_config:
+              - "authentication"
+              - "token_expiry_date"
+              format: "date-time"
+        complete_oauth_server_input_specification:
+          type: "object"
+          additionalProperties: false
+          properties:
+            client_id:
+              type: "string"
+            client_secret:
+              type: "string"
+        complete_oauth_server_output_specification:
+          type: "object"
+          additionalProperties: false
+          properties:
+            client_id:
+              type: "string"
+              path_in_connector_config:
+              - "authentication"
+              - "client_id"
+            client_secret:
+              type: "string"
+              path_in_connector_config:
+              - "authentication"
+              - "client_secret"
 - dockerImage: "airbyte/source-xkcd:0.1.1"
   spec:
     documentationUrl: "https://docs.airbyte.io/integrations/sources/xkcd"
