--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -5793,12 +5793,12 @@
         oauthFlowOutputParameters:
         - - "access_token"
         - - "refresh_token"
-- dockerImage: "airbyte/source-google-analytics-data-api:0.1.2"
+- dockerImage: "airbyte/source-google-analytics-data-api:0.1.3"
   spec:
-    documentationUrl: "https://docs.airbyte.com/integrations/sources/google-analytics-v4"
+    documentationUrl: "https://docs.airbyte.com/integrations/sources/google-analytics-data-api"
     connectionSpecification:
-      $schema: "http://json-schema.org/draft-07/schema#"
-      title: "Google Analytics 4 (GA4) Spec"
+      $schema: "https://json-schema.org/draft-07/schema#"
+      title: "Google Analytics (Data API) Spec"
       type: "object"
       required:
       - "property_id"
