--- a/.github/workflows/test-connector-performance-command.yml
+++ b/.github/workflows/test-connector-performance-command.yml
@@ -121,7 +121,7 @@ jobs:
           echo "Loading connector image into kind" >> $GITHUB_STEP_SUMMARY
           echo "pulling harness image..."
           docker pull rodireich/perftestrepo:16
-          echo "Loading harness image into kind" >> $GITHUB_STEP_SUMMARY
+          echo "Loading harness image rodireich/perftestrepo:16 into kind" >> $GITHUB_STEP_SUMMARY
           kind load docker-image rodireich/perftestrepo:16 --name chart-testing
           echo "loading pod..."
           kubectl create -f ./tools/bin/test-postgres-source-process.yaml
