--- a/airbyte-config/init/src/main/resources/seed/source_specs.yaml
+++ b/airbyte-config/init/src/main/resources/seed/source_specs.yaml
@@ -13359,7 +13359,7 @@
     supportsNormalization: false
     supportsDBT: false
     supported_destination_sync_modes: []
-- dockerImage: "airbyte/source-salesforce:2.0.6"
+- dockerImage: "airbyte/source-salesforce:2.0.7"
   spec:
     documentationUrl: "https://docs.airbyte.com/integrations/sources/salesforce"
     connectionSpecification:
@@ -13409,11 +13409,11 @@
             \ the data added on and after this date. If this field is blank, Airbyte\
             \ will replicate all data."
           type: "string"
-          pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}Z|[0-9]{4}-[0-9]{2}-[0-9]{2}$"
+          pattern: "^([0-9]{4}-[0-9]{2}-[0-9]{2}(T[0-9]{2}:[0-9]{2}:[0-9]{2}Z)?)$"
           examples:
           - "2021-07-25"
           - "2021-07-25T00:00:00Z"
-          format: "date"
+          format: "date-time"
           order: 5
         streams_criteria:
           type: "array"
