--- a/airbyte-integrations/connectors/source-yandex-metrica/source_yandex_metrica/spec.yaml
+++ b/airbyte-integrations/connectors/source-yandex-metrica/source_yandex_metrica/spec.yaml
@@ -1,6 +1,6 @@
-documentationUrl: https://docsurl.com
+documentationUrl: https://docs.airbyte.com/integrations/sources/yandex-metrica
 connectionSpecification:
-  $schema: http://json-schema.org/draft-07/schema#
+  $schema: https://json-schema.org/draft-07/schema#
   title: Yandex Metrica Spec
   type: object
   required:
@@ -27,6 +27,7 @@ connectionSpecification:
       type: string
       description: UTC date and time in the format YYYY-MM-DD.
       pattern: ^[0-9]{4}-[0-9]{2}-[0-9]{2}$
+      format: date
       examples:
         - "2022-01-01"
       order: 2
@@ -35,6 +36,7 @@ connectionSpecification:
       type: string
       description: UTC date and time in the format YYYY-MM-DD.
       pattern: ^[0-9]{4}-[0-9]{2}-[0-9]{2}$
+      format: date
       examples:
         - "2022-01-01"
       order: 3
