--- a/airbyte-integrations/connectors/source-tidsbanken-api/source_tidsbanken_api/tidsbanken_api.yaml
+++ b/airbyte-integrations/connectors/source-tidsbanken-api/source_tidsbanken_api/tidsbanken_api.yaml
@@ -161,9 +161,13 @@ streams:
           artId:
             type: string
           avdeling:
-            type: 'null'
+            type: 
+              - 'null'
+              - string
           avdelingId:
-            type: string
+            type: 
+              - 'null'
+              - string
           avsnittId:
             type:
               - 'null'
@@ -391,3 +395,149 @@ streams:
           field_path: []
       paginator:
         type: NoPagination
+  - type: DeclarativeStream
+    name: timelister_date_paginated
+    primary_key:
+      - timeregistreringId
+    schema_loader:
+      type: InlineSchemaLoader
+      schema:
+        $schema: http://json-schema.org/schema#
+        properties:
+          anleggId:
+            type: 'null'
+          ansatt:
+            type: 'null'
+          ansattId:
+            type: integer
+          arbeidsartId:
+            type: string
+          artId:
+            type: string
+          avdeling:
+            type: 'null'
+          avdelingId:
+            type: string
+          avsnittId:
+            type:
+              - 'null'
+              - string
+          dato:
+            type: string
+          endretDato:
+            type: string
+          fAntall:
+            type: number
+          faktureres:
+            type: boolean
+          godkjent:
+            type: boolean
+          jobbId:
+            type:
+              - 'null'
+              - string
+          kontoId:
+            type: 'null'
+          kostpris:
+            type: number
+          kundeId:
+            type: 'null'
+          ma_Timer:
+            type: number
+          notat:
+            type:
+              - 'null'
+              - string
+          opprettetDato:
+            type: string
+          planFra:
+            type:
+              - 'null'
+              - string
+          planTil:
+            type:
+              - 'null'
+              - string
+          produktId:
+            type:
+              - 'null'
+              - string
+          produktiv:
+            type: boolean
+          prosjekt:
+            type: 'null'
+          prosjektId:
+            type:
+              - 'null'
+              - string
+          salgspris:
+            type: number
+          t_ArbT:
+            type: number
+          t_Pause1_Fra:
+            type:
+              - 'null'
+              - string
+          t_Pause1_Til:
+            type:
+              - 'null'
+              - string
+          t_Pause2_Fra:
+            type: 'null'
+          t_Pause2_Til:
+            type: 'null'
+          timeType:
+            type: integer
+          timeregistreringId:
+            type: integer
+          tm_Stemple_inn:
+            type: string
+          tm_Stemple_ut:
+            type: string
+          tm_Virk_inn:
+            type: string
+          tm_Virk_ut:
+            type: string
+        type: object
+    retriever:
+      type: SimpleRetriever
+      requester:
+        type: HttpRequester
+        url_base: https://api.tidsbanken.net/v2
+        path: >-
+          /timelister?$filter=endretDato ge {{ config['start_date'] }} and
+          endretDato lt {{ config['end_date'] }}
+        http_method: GET
+        request_parameters: {}
+        request_headers: {}
+        request_body_json: {}
+        authenticator:
+          type: ApiKeyAuthenticator
+          api_token: '{{ config[''api_key''] }}'
+          header: tb-key
+      record_selector:
+        type: RecordSelector
+        extractor:
+          type: DpathExtractor
+          field_path: []
+      paginator:
+        type: DefaultPaginator
+        page_token_option:
+          type: RequestOption
+          inject_into: request_parameter
+          field_name: $skiptoken
+        page_size_option:
+          inject_into: request_parameter
+          type: RequestOption
+          field_name: $top
+        pagination_strategy:
+          type: OffsetIncrement
+          page_size: 100
+    incremental_sync:
+      type: DatetimeBasedCursor
+      cursor_field: endretDato
+      datetime_format: '%Y-%m-%dT%H:%M:%SZ'
+      cursor_granularity: PT1S
+      end_datetime: '{{ config[''end_time''] }}'
+      start_datetime: '{{ config[''start_date''] }}'
+      step: P1D
