--- a/airbyte-integrations/connectors/source-tidsbanken-api/source_tidsbanken_api/manifest.yaml
+++ b/airbyte-integrations/connectors/source-tidsbanken-api/source_tidsbanken_api/manifest.yaml
@@ -133,7 +133,7 @@ streams:
         page_token_option:
           type: RequestOption
           inject_into: request_parameter
-          field_name: $skiptoken
+          field_name: $skip
         page_size_option:
           inject_into: request_parameter
           type: RequestOption
@@ -513,8 +513,7 @@ streams:
         type: HttpRequester
         url_base: https://api.tidsbanken.net/v2
         path: >-
-          /timelister?$filter=endretDato ge {{ config['start_date'] }} and
-          endretDato lt {{ config['end_date'] }}
+          /timelister
         http_method: GET
         request_parameters: {}
         request_headers: {}
@@ -533,7 +532,7 @@ streams:
         page_token_option:
           type: RequestOption
           inject_into: request_parameter
-          field_name: $skiptoken
+          field_name: $skip
         page_size_option:
           inject_into: request_parameter
           type: RequestOption
