--- a/airbyte-integrations/connectors/source-tidsbanken-api/source_tidsbanken_api/tidsbanken_api.yaml
+++ b/airbyte-integrations/connectors/source-tidsbanken-api/source_tidsbanken_api/tidsbanken_api.yaml
@@ -505,8 +505,7 @@ streams:
         type: HttpRequester
         url_base: https://api.tidsbanken.net/v2
         path: >-
-          /timelister?$filter=endretDato ge {{ config['start_date'] }} and
-          endretDato lt {{ config['end_date'] }}
+          /timelister
         http_method: GET
         request_parameters: {}
         request_headers: {}
@@ -525,7 +524,7 @@ streams:
         page_token_option:
           type: RequestOption
           inject_into: request_parameter
-          field_name: $skiptoken
+          field_name: $skip
         page_size_option:
           inject_into: request_parameter
           type: RequestOption
