--- a/airbyte-integrations/connectors/source-zoho-crm/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-zoho-crm/acceptance-test-config.yml
@@ -23,6 +23,10 @@ acceptance_tests:
           extra_fields: no
           exact_order: no
           extra_records: yes
+        ignored_fields:
+          incremental_contacts_zoho_crm_stream:
+            - name: Contact_Auto_Number
+              bypass_reason: "depend on changing data"
   incremental:
     tests:
       - config_path: "secrets/config.json"
